# autodatastore

./: .env  README.md  pyproject.toml
airflow/dags/: vehicle_data_pipeline.py
data/raw/: sample_vehicle_data.json
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/core/: dimensions_capacity.sql  exterior_features.sql  interior_features.sql  performance_specs.sql  pricing_availability.sql  safety_features.sql  schema.yml  vehicle_trims.sql
docs/: DESIGN_DOCUMENTATION.md  IMPLEMENTATION_TASKS.md  KANBAN_BOARD.md  PROJECT_STRUCTURE.md  SOLUTION_DOCUMENTATION.md
notebooks/: exploratory_analysis.ipynb
scripts/ingestion/: ingest_vehicle_data.py
sql/: create_raw_vehicle_data_table.sql
